# rox

./: .gitignore  Appendix.md  Cargo.toml  README.md  implementation_notes.md
.github/workflows/: rust.yml  rust_safe.yml
crates/gc_derive/: Cargo.toml
crates/gc_derive/src/: lib.rs
crates/rox_gc/: Cargo.toml
crates/rox_gc/src/: gc.rs  lib.rs  trace.rs
src/: chunk.rs  compiler.rs  hashtable.rs  lec.rs  lib.rs  main.rs  objects.rs  op_code.rs  scanner.rs  stack.rs  token.rs  utils.rs  value.rs  vm.rs
tests/: chunk.rs  integration.rs  lec.rs
