[package]
name = "rox"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Kangaxx-0/rox"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.3.0"
assert_cmd = "2.0.4"
pretty_assertions = "1.2.1"
